--- a/index.html
+++ b/index.html
@@ -13,51 +13,37 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background: #1e1e2f;
             color: #ffffff;
             line-height: 1.6;
+            background: url('https://developer.valvesoftware.com/w/images/2/26/1920x1080-SymbolFall.gif') center/cover no-repeat fixed; /* Добавлен фон */
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            background: rgba(30, 30, 47, 0.8); /* Полупрозрачный фон для контейнера */
+            border-radius: 10px;
         }
 
         header {
             text-align: center;
             padding: 60px 0;
-            background: url('https://gifdb.com/images/high/ken-kaneki-evil-eyes-open-vvo9l8ag1f2p737c.gif') center/cover no-repeat;
             color: white;
             border-radius: 0 0 20px 20px;
             position: relative;
             overflow: hidden;
         }
 
-        header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 1;
-        }
-
         header h1 {
             font-size: 3em;
             margin: 0;
-            position: relative;
-            z-index: 2;
             color: #ffffff;
         }
 
         header p {
             font-size: 1.2em;
             margin: 10px 0 0;
-            position: relative;
-            z-index: 2;
             color: #ffffff;
         }
 
@@ -73,20 +59,6 @@
             font-size: 2em;
             margin-bottom: 20px;
             color: #6a11cb;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 10px 20px;
-            background: #6a11cb;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-
-        .btn:hover {
-            background: #2575fc;
         }
 
         footer {
@@ -123,24 +95,6 @@
 
         a:hover {
             color: #2575fc;
-        }
-
-        /* Кнопка "Наверх" */
-        .scroll-to-top {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            background: #6a11cb;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 15px;
-            cursor: pointer;
-            display: none; /* Скрыть по умолчанию */
-        }
-
-        .scroll-to-top:hover {
-            background: #2575fc;
         }
     </style>
 </head>
@@ -181,7 +135,7 @@
                 Если у вас есть вопросы или предложения, свяжитесь со мной:
             </p>
             <ul>
-                <li>Email: <a href="mailto:benqxc@example.com">0benqxc0@gmail.com</a></li>
+                < li>Email: <a href="mailto:benqxc@example.com">0benqxc0@gmail.com</a></li>
                 <li>GitHub: <a href="https://github.com/benqxc" target="_blank" rel="noopener noreferrer">github.com/benqxc</a></li>
                 <li>Telegram: <a href="https://t.me/benqxc" target="_blank" rel="noopener noreferrer">@benqxc</a></li>
             </ul>
