--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 Если у вас есть вопросы или предложения, свяжитесь со мной:
             </p>
             <ul>
-                < li>Email: <a href="mailto:benqxc@example.com">0benqxc0@gmail.com</a></li>
+                <li>Email: <a href="0benqxc0@gmail.com">0benqxc0@gmail.com</a></li>
                 <li>GitHub: <a href="https://github.com/benqxc" target="_blank" rel="noopener noreferrer">github.com/benqxc</a></li>
                 <li>Telegram: <a href="https://t.me/benqxc" target="_blank" rel="noopener noreferrer">@benqxc</a></li>
             </ul>
