--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             color: #00ff00; /* Зеленый цвет текста */
             line-height: 1.6;
             background: url('https://developer.valvesoftware.com/w/images/2/26/1920x1080-SymbolFall.gif') center/cover no-repeat fixed; /* Добавлен фон */
-            overflow: hidden; /* Скрыть прокрутку */
         }
 
         .container {
@@ -123,14 +122,14 @@
         </section>
 
         <section>
-            <h2>Навыки</h2>
+            <h2>Хакерские навыки</h2>
             <ul>
-                <li>JavaScript (ES6+, Node.js, React)</li>
-                <li>Python (Django, Flask, NumPy, Pandas)</li>
-                <li>HTML5, CSS3 (включая Flexbox и Grid)</li>
-                <li>Работа с базами данных (SQL, MongoDB)</li>
-                <li>Git и системы контроля версий</li>
-                <li>Docker и DevOps-практики</li>
+                <li>DDoS-атаки и защита от них</li>
+                <li>Взлом паролей и методы их защиты</li>
+                <li>Социальная инженерия</li>
+                <li>Анализ уязвимостей</li>
+                <li>Работа с сетевыми протоколами</li>
+                <li>Использование инструментов для тестирования на проникновение (например, Metasploit)</li>
             </ul>
         </section>
 
