--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
     <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
     <title>benqxc - Программист JS & Python</title>
     <style>
-        /* Общие стили */
         body {
             margin: 0;
-            font-family: 'Courier New', monospace; /* Шрифт в стиле хакера */
-            color: #00ff00; /* Зеленый цвет текста */
+            font-family: 'Courier New', monospace;
+            color: #00ff00;
             line-height: 1.6;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url('https://developer.valvesoftware.com/w/images/2/26/1920x1080-SymbolFall.gif') center/cover no-repeat fixed; /* Градиентный фон */
+            background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url('https://developer.valvesoftware.com/w/images/2/26/1920x1080-SymbolFall.gif') center/cover no-repeat fixed;
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.7); /* Темный полупрозрачный фон для контейнера */
+            background: rgba(0, 0, 0, 0.7);
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 255, 0, 0.5); /* Эффект свечения */
-            transition: transform 0.3s; /* Анимация при наведении */
+            box-shadow: 0 0 20px rgba(0, 255, 0, 0.5);
+            transition: transform 0.3s;
         }
 
         .container:hover {
-            transform: scale(1.02); /* Увеличение при наведении */
+            transform: scale(1.02);
         }
 
         header {
@@ -42,13 +41,13 @@
         }
 
         header h1 {
-            font-size: 3.5em; /* Увеличенный размер заголовка */
+            font-size: 3.5em;
             margin: 0;
-            text-shadow: 0 0 10px rgba(0, 255, 0, 0.8); /* Эффект свечения */
+            text-shadow: 0 0 10px rgba(0, 255, 0, 0.8);
         }
 
         header p {
-            font-size: 1.5em; /* Увеличенный размер текста */
+            font-size: 1.5em;
             margin: 10px 0 0;
             color: #00ff00;
         }
@@ -56,22 +55,22 @@
         section {
             margin: 40px 0;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.6); /* Темный фон для секций */
+            background: rgba(0, 0, 0, 0.6);
             border-radius: 10px;
             backdrop-filter: blur(10px);
-            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5); /* Эффект свечения */
-            transition: transform 0.3s; /* Анимация при наведении */
+            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+            transition: transform 0.3s;
         }
 
         section:hover {
-            transform: scale(1.02); /* Увеличение при наведении */
+            transform: scale(1.02);
         }
 
         section h2 {
-            font-size: 2.5em; /* Увеличенный размер заголовка секции */
+            font-size: 2.5em;
             margin-bottom: 20px;
             color: #00ff00;
-            text-shadow: 0 0 5px rgba(0, 255, 0, 0.8); /* Эффект свечения */
+            text-shadow: 0 0 5px rgba(0, 255, 0, 0.8);
         }
 
         footer {
@@ -89,7 +88,7 @@
 
         footer a:hover {
             text-decoration: underline;
-            color: #ffcc00; /* Цвет при наведении */
+            color: #ffcc00;
         }
 
         ul {
@@ -108,10 +107,9 @@
         }
 
         a:hover {
-            color: #ffcc00; /* Цвет при наведении */
+            color: #ffcc00;
         }
 
-        /* Анимация для появления секций */
         section {
             opacity: 0;
             transform: translateY(20px);
