--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: rgba (0, 255, 0, 0.7);
+            background: rgba(0, 255, 0, 0.7);
             color: #000;
             border: none;
             border-radius: 5px;
@@ -195,10 +195,13 @@
         <section id="about">
             <h2>О себе</h2>
             <p>
-                Привет! Меня зовут benqxc, и я занимаюсь разработкой на JavaScript и Python. 
-                Я создаю современные веб-приложения, автоматизирую задачи и разрабатываю 
-                интересные проекты. В свободное время люблю изучать новые технологии и 
-                улучшать свои навыки.
+                Привет! Я benqxc, увлеченный разработчик, который стремится создавать 
+                инновационные решения с использованием JavaScript и Python. Мой опыт 
+                охватывает создание веб-приложений, автоматизацию процессов и 
+                разработку программного обеспечения. Я постоянно изучаю новые технологии 
+                и применяю их в своих проектах, чтобы оставаться на переднем крае 
+                индустрии. В свободное время я люблю делиться знаниями и участвовать 
+                в хакатонах, где могу встретить единомышленников и обменяться идеями.
             </p>
         </section>
 
@@ -229,7 +232,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2023 benqxc. Все права защищены.</p>
+            <p>&copy; 2025 benqxc. Все права защищены.</p>
         </div>
     </footer>
 
