--- a/index.html
+++ b/index.html
@@ -8,23 +8,38 @@
     <meta name="author" content="benqxc">
     <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>benqxc - Программист JS & Python</title>
     <style>
         body {
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            color: #00ff00;
+            color: #ffffff;
             line-height: 1.6;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)), url('https://developer.valvesoftware.com/w/images/2/26/1920x1080-SymbolFall.gif') center/cover no-repeat fixed;
+            background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.6)), url('https://avatars.mds.yandex.net/i?id=aebdf81101f852bb9f96bade662153b8_l-5236667-images-thumbs&n=13') center/cover no-repeat fixed;
+            overflow-x: hidden;
+            transition: background 0.3s, color 0.3s;
+        }
+
+        body.light {
+            background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.8), rgba(240, 240, 240, 0.9));
+            color: #333;
         }
 
         nav {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 10px;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 15px;
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+            transition: background 0.3s;
+        }
+
+        nav.scrolled {
+            background: rgba(0, 0, 0, 0.9);
         }
 
         nav ul {
@@ -35,18 +50,32 @@
         }
 
         nav ul li {
-            margin: 0 15px;
+            margin: 0 20px;
         }
 
         nav a {
-            color: #00ff00;
+            color: #ffcc00;
             text-decoration: none;
             font-weight: 700;
-            transition: color 0.3s;
+            transition: color 0.3s, transform 0.3s;
+            font-size: 1.1em;
         }
 
         nav a:hover {
+            color: #00ff00;
+            transform: scale(1.1);
+        }
+
+        .theme-toggle {
+            cursor: pointer;
             color: #ffcc00;
+            font-size: 1.5em;
+            position: fixed;
+            top: 15px;
+            right: 15px;
+            background: none;
+            border: none;
+            transition: color 0.3s;
         }
 
         .container {
@@ -55,55 +84,73 @@
             padding: 20px;
             background: rgba(0, 0, 0, 0.7);
             border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 255, 0, 0.5);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            margin-top: 80px;
             transition: transform 0.3s;
-            margin-top: 60px; /* Отступ для навигации */
-        }
-
-        .container:hover {
-            transform: scale(1.02);
         }
 
         header {
             text-align: center;
-            padding: 60px 0;
-            color: #00ff00;
-            border-radius: 0 0 20px 20px;
+            padding: 80px 0;
+            color: #ffcc00;
             position: relative;
             overflow: hidden;
         }
 
         header h1 {
-            font-size: 3.5em;
+            font-size: 4em;
             margin: 0;
-            text-shadow: 0 0 10px rgba(0, 255, 0, 0.8);
+            text-shadow: 0 0 20px rgba(255, 255, 0, 1);
+            animation: fadeIn 1s ease-in-out;
+            font-family: 'Montserrat', sans-serif;
         }
 
         header p {
-            font-size: 1.5em;
+            font-size: 1.8em;
             margin: 10px 0 0;
-            color: #00ff00;
+            text-shadow: 0 0 10px rgba(255, 255, 0, 0.8);
+            animation: fadeIn 1.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         section {
             margin: 40px 0;
-            padding: 20px;
+            padding: 30px;
             background: rgba(0, 0, 0, 0.6);
             border-radius: 10px;
             backdrop-filter: blur(10px);
-            box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
-            transition: transform 0.3s;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.5);
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         section:hover {
             transform: scale(1.02);
+            box-shadow: 0 0 25px rgba(255, 255, 0, 0.8);
         }
 
         section h2 {
-            font-size: 2.5em;
+            font-size: 2.8em;
             margin-bottom: 20px;
-            color: #00ff00;
-            text-shadow: 0 0 5px rgba(0, 255, 0, 0.8);
+            color: #ffcc00;
+            text-shadow: 0 0 15px rgba(255, 255, 0, 1);
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+            padding: 20px;
+            margin: 10px;
+            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
         }
 
         footer {
@@ -115,13 +162,13 @@
         }
 
         footer a {
-            color: #00ff00;
+            color: #ffcc00;
             text-decoration: none;
         }
 
         footer a:hover {
             text-decoration: underline;
-            color: #ffcc00;
+            color: #00ff00;
         }
 
         ul {
@@ -133,53 +180,105 @@
             margin-bottom: 10px;
         }
 
-        a {
-            color: #00ff00;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        a:hover {
-            color: #ffcc00;
-        }
-
-        section {
-            opacity: 0;
-            transform: translateY(20px);
-            animation: fadeInUp 0.5s forwards;
-        }
-
-        @keyframes fadeInUp {
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
         .back-to-top {
             position: fixed;
             bottom: 20px;
             right: 20px;
-            background: rgba(0, 255, 0, 0.7);
+            background: linear-gradient(to right, #ffcc00, #00ff00);
             color: #000;
             border: none;
             border-radius: 5px;
             padding: 10px 15px;
             cursor: pointer;
             display: none;
-            transition: background 0.3s;
+            transition: background 0.3s, transform 0.3s;
+            font-weight: bold;
         }
 
         .back-to-top:hover {
+            background: #ffcc00;
+            transform: scale(1.1);
+        }
+
+        .contact-form {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .contact-form input, .contact-form textarea {
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+        }
+
+        .contact-form button {
+            padding: 10px;
+            background: linear-gradient(to right, #ffcc00, #00ff00);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+
+        .contact-form button:hover {
             background: #00ff00;
+        }
+
+        .technologies {
+            display: flex;
+            justify-content: space-around;
+            margin: 40px 0;
+        }
+
+        .technology {
+            text-align: center;
+        }
+
+        .technology img {
+            width: 50px;
+            height: 50px;
+            margin-bottom: 10px;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                flex-direction: column;
+            }
+
+            nav ul li {
+                margin: 10px 0;
+            }
+
+            header h1 {
+                font-size: 2.5em;
+            }
+
+            header p {
+                font-size: 1.2em;
+            }
+
+            section h2 {
+                font-size: 2em;
+            }
+
+            .technologies {
+                flex-direction: column;
+                align-items: center;
+            }
         }
     </style>
 </head>
 <body>
+    <button class="theme-toggle" onclick="toggleTheme()"><i class="fas fa-adjust"></i></button>
+
     <nav>
         <ul>
             <li><a href="#about">О себе</a></li>
-            <li><a href="#skills">Навыки социальной инженерии</a></li>
+            <li><a href="#skills">Навыки</a></li>
+            <li><a href="#technologies">Технологии</a></li>
             <li><a href="#contacts">Контакты</a></li>
         </ul>
     </nav>
@@ -188,6 +287,11 @@
         <div class="container">
             <h1>benqxc</h1>
             <p>Программист JavaScript & Python</p>
+            <div class="social-icons">
+                <a href="https://github.com/benqxc" target="_blank" rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a>
+                <a href="https://t.me/benqxc" target="_blank" rel="noopener noreferrer"><i class="fab fa-telegram fa-2x"></i></a>
+            </div>
+            <a href="path/to/resume.pdf" download class="back-to-top">Скачать резюме</a>
         </div>
     </header>
 
@@ -195,62 +299,105 @@
         <section id="about">
             <h2>О себе</h2>
             <p>
-                Привет! Я benqxc, увлеченный разработчик, который стремится создавать 
-                инновационные решения с использованием JavaScript и Python. Мой опыт 
-                охватывает создание веб-приложений, автоматизацию процессов и 
-                разработку программного обеспечения. Я постоянно изучаю новые технологии 
-                и применяю их в своих проектах, чтобы оставаться на переднем крае 
-                индустрии. В свободное время я люблю делиться знаниями и участвовать 
-                в хакатонах, где могу встретить единомышленников и обменяться идеями.
+                Привет! Я benqxc, увлеченный программист, который стремится создавать инновационные решения с использованием JavaScript и
+                Python. Мой опыт охватывает не только создание веб-приложений, но и исследование уязвимостей, автоматизацию процессов и
+                разработку программного обеспечения. Я постоянно изучаю новые технологии и методы, чтобы оставаться на переднем крае
+                индустрии и улучшать свои навыки. В свободное время я люблю делиться знаниями, участвовать в хакатонах и
+                CTF-соревнованиях, где могу встретить единомышленников и обменяться идеями. Я также увлекаюсь разработкой игр и изучением новых языков программирования, что помогает мне расширять свои горизонты и подходы к решению задач.
             </p>
         </section>
 
         <section id="skills">
-            <h2>Навыки социальной инженерии</h2>
-            <ul>
-                <li>DDoS-атаки и защита от них</li>
-                <li>Взлом паролей и методы их защиты</li>
-                <li>Социальная инженерия</li>
-                <li>Анализ уязвимостей</li>
-                <li>Работа с сетевыми протоколами</li>
-                <li>Использование инструментов для тестирования на проникновение (например, Metasploit)</li>
-            </ul>
+            <h2>Навыки</h2>
+            <div class="card">
+                <ul>
+                    <li>DDoS-атаки и защита от них</li>
+                    <li>Взлом паролей и методы их защиты</li>
+                    <li>Социальная инженерия</li>
+                    <li>Анализ уязвимостей</li>
+                    <li>Работа с сетевыми протоколами</li <li>Использование инструментов для тестирования на проникновение (например, Metasploit)</li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="technologies">
+            <h2>Технологии</h2>
+            <div class="technologies">
+                <div class="technology card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript">
+                    <p>JavaScript</p>
+                </div>
+                <div class="technology card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Python">
+                    <p>Python</p>
+                </div>
+                <div class="technology card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Node.js_logo.svg" alt="Node.js">
+                    <p>Node.js</p>
+                </div>
+                <div class="technology card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/47/React.svg" alt="React">
+                    <p>React</p>
+                </div>
+                <div class="technology card">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Flask_logo.svg" alt="Flask">
+                    <p>Flask</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="hobbies">
+            <h2>Хобби</h2>
+            <div class="card">
+                <p>В свободное время я увлекаюсь:</p>
+                <ul>
+                    <li>Чтением научной фантастики</li>
+                    <li>Играми на компьютере</li>
+                    <li>Путешествиями и изучением новых культур</li>
+                    <li>Фотографией и видеосъемкой</li>
+                </ul>
+            </div>
         </section>
 
         <section id="contacts">
             <h2>Контакты</h2>
-            <p>
-                Если у вас есть вопросы или предложения, свяжитесь со мной:
-            </p>
+            <p>Если у вас есть вопросы или предложения, свяжитесь со мной:</p>
             <ul>
                 <li>Email: <a href="mailto:0benqxc0@gmail.com">0benqxc0@gmail.com</a></li>
-                <li>GitHub: <a href="https://github.com/benqxc" target="_blank" rel="noopener noreferrer">github.com/benqxc</a></li>
-                <li>Telegram: <a href="https://t.me/benqxc" target="_blank" rel="noopener noreferrer">@benqxc</a></li>
             </ul>
+            <form class="contact-form" action="submit_form.php" method="POST">
+                <input type="text" name="name" placeholder="Ваше имя" required>
+                <input type="email" name="email" placeholder="Ваш email" required>
+                <textarea name="message" rows="5" placeholder="Ваше сообщение" required></textarea>
+                <button type="submit">Отправить сообщение</button>
+            </form>
         </section>
     </div>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2025 benqxc. Все права защищены.</p>
-        </div>
+        <p>&copy; 2023 benqxc. Все права защищены.</p>
     </footer>
 
-    <button class="back-to-top" onclick="scrollToTop()">Наверх</button>
-
     <script>
-        window.onscroll = function() {
-            const button = document.querySelector('.back-to-top');
-            if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-                button.style.display = "block";
-            } else {
-                button.style.display = "none";
-            }
+        const toggleTheme = () => {
+            document.body.classList.toggle('light');
         };
 
-        function scrollToTop() {
-            window.scrollTo({top: 0, behavior: 'smooth'});
-        }
+        const handleScroll = () => {
+            const nav = document.querySelector('nav');
+            nav.classList.toggle('scrolled', window.scrollY > 50);
+            const backToTopButton = document.querySelector('.back-to-top');
+            backToTopButton.style.display = window.scrollY > 300 ? 'block' : 'none';
+        };
+
+        const handleFormSubmit = (event) => {
+            event.preventDefault();
+            alert('Ваше сообщение успешно отправлено!');
+            event.target.reset();
+        };
+
+        document.querySelector('.contact-form').addEventListener('submit', handleFormSubmit);
+        window.addEventListener('scroll', handleScroll);
     </script>
 </body>
 </html>
